# joplin-ux-analysis

./: README.md  pyproject.toml
categorized_data/: analyzed_threads.json  categorize_joplin.py  categorized_results.json  generate_charts.py
cleaned_data/: clean_data.py  discourse_threads_cleaned.json  github_issues_cleaned.json  reddit_threads_cleaned.json
original_data/: data_collector.py  discourse_threads.json  github_issues.json  reddit_threads.json
