[project]
name = "joplin-ux-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "praw>=7.8.1",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "openai>=1.25.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "mypy>=1.16.0",
]
